# LLVM-ROSE-Plugin

./: CMakeLists.txt  LLVMRosePass.cpp  LLVMRosePass.hpp  README.md  ROSEPass.cpp  ROSEPlugin.cpp  RoseConnectionClangPlugin.cpp  RoseConnectionClangPlugin.hpp  RoseConnectionLLVMPassPlugin.cpp  RoseConnectionLLVMPassPlugin.hpp
test/: test1.c  test2.c  test3.c
